# fights-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
Includes/fights/: Action.hpp  Board.hpp  Common.hpp  Game.hpp  Player.hpp
Includes/search/: Config.hpp
Includes/search/Game/: ActionSpace.hpp  Environment.hpp  Hashing.hpp
Includes/search/NN/: FakeNet.hpp  NNBase.hpp  NNManager.hpp  Preprocessor.hpp  TorchNet.hpp
Includes/search/Search/: MCTS.hpp  MCTSController.hpp  MCTSNode.hpp
Includes/search/Utils/: Utils.hpp  WaitGroup.hpp
Includes/selfplay/: game.hpp
Sources/fights/: Action.cc  Board.cc  CMakeLists.txt  Common.cc  Game.cc
Sources/play/: CMakeLists.txt  main.cc
Sources/search/: CMakeLists.txt  Config.cc
Sources/search/Game/: ActionSpace.cc  Environment.cc  Hashing.cc
Sources/search/NN/: FakeNet.cc  NNBase.cc  NNManager.cc  Preprocessor.cc  TorchNet.cc
Sources/search/Search/: MCTS.cc  MCTSController.cc  MCTSNode.cc
Sources/search/Utils/: WaitGroup.cc
Sources/selfplay/: CMakeLists.txt  game.cc  main.cc
Sources/selfviewer/: CMakeLists.txt  main.cc
Tests/UnitTests/: CMakeLists.txt  CommonTests.cc  GameTests.cc  PlayerTests.cc  main.cc
